Never write null author/last_mod_user on shared sound fragment insert
Fall back to SuperUser.ID when there's no resolved submitter account
(e.g. an anonymous contribution), matching the existing pattern used
for RLS grants in the same flow. Previously a null submitter id
propagated into the author/last_mod_user audit columns, causing an NPE
the first time that row was read back (AsyncRepository.setDefaultFields
unboxes them as primitive long).

Also adds a public slug-based upsert endpoint
(POST /datanest/public/soundfragments/{slugName}) mirroring the private
one, stripping any id sent in the body since identity now comes from
the URL slug.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>